--- a/src/main/resources/krisapps/urlchecker/urlchecker/application_ui.fxml
+++ b/src/main/resources/krisapps/urlchecker/urlchecker/application_ui.fxml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="panel" alignment="CENTER" maxHeight="1.7976931348623157E308"
-      maxWidth="1.7976931348623157E308" prefHeight="700.0" prefWidth="900.0" spacing="20.0"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="panel" focusTraversable="true" maxHeight="1.7976931348623157E308"
+      maxWidth="1.7976931348623157E308" pickOnBounds="false" prefHeight="813.0" prefWidth="1050.0" spacing="20.0"
       xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="krisapps.urlchecker.urlchecker.CheckerController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
    </padding>
    <children>
-      <Label fx:id="window_label" text="KrisApps Website URL Analyzer" textAlignment="CENTER">
+      <Label fx:id="window_label" prefHeight="34.0" prefWidth="991.0" text="KrisApps URL Analyzer"
+             textAlignment="CENTER">
          <font>
             <Font name="Segoe UI" size="28.0"/>
          </font>
       </Label>
-      <Label fx:id="window_subtitle" alignment="TOP_CENTER" contentDisplay="RIGHT" prefHeight="23.0" prefWidth="581.0"
-             text="Enter the URL and select your desired options to scan" textAlignment="CENTER" wrapText="true">
-         <font>
-            <Font name="Segoe UI" size="18.0"/>
-         </font>
-      </Label>
-      <Pane fx:id="container" prefHeight="620.0" prefWidth="860.0">
+      <Pane fx:id="container" prefHeight="809.0" prefWidth="1060.0">
          <children>
-            <Pane fx:id="setupPanel" layoutX="98.0" layoutY="7.0" onMouseMoved="#refreshSetupInfo" prefHeight="554.0"
-                  prefWidth="666.0">
+            <Pane fx:id="setupPanel" layoutX="-2.0" onMouseMoved="#refreshSetupInfo" pickOnBounds="false"
+                  prefHeight="701.0" prefWidth="568.0">
                <children>
-                  <TextField fx:id="url_field" layoutX="71.0" layoutY="14.0"
+                  <TextField fx:id="url_field" layoutX="12.0" layoutY="73.0"
                              onInputMethodTextChanged="#refreshSetupInfo" onKeyTyped="#refreshSetupInfo"
                              prefHeight="49.0" prefWidth="524.0" promptText="Enter the URL to check"
                              style="-fx-border-color: black; -fx-border-width: 3;">
@@ -35,32 +30,32 @@
                         <Font name="Segoe UI" size="15.0"/>
                      </font>
                   </TextField>
-                  <Button fx:id="button_start" accessibleText="Commence scan!" alignment="CENTER" layoutX="116.0"
-                          layoutY="516.0" maxHeight="29.0" maxWidth="447.0" minHeight="-Infinity" minWidth="-Infinity"
+                  <Button fx:id="button_start" accessibleText="Commence scan!" alignment="CENTER" layoutX="50.0"
+                          layoutY="658.0" maxHeight="29.0" maxWidth="447.0" minHeight="-Infinity" minWidth="-Infinity"
                           mnemonicParsing="false" onAction="#startTest" prefHeight="29.0" prefWidth="447.0"
                           style="-fx-background-color: white; -fx-border-color: black;" text="Test the URL!">
                      <font>
                         <Font name="Segoe UI Black" size="13.0"/>
                      </font>
                   </Button>
-                  <Pane fx:id="status_container" layoutX="71.0" layoutY="392.0" prefHeight="116.0" prefWidth="525.0"
+                  <Pane fx:id="status_container" layoutX="15.0" layoutY="532.0" prefHeight="116.0" prefWidth="517.0"
                         style="-fx-border-color: black; -fx-border-width: 2;">
                      <children>
-                        <Label fx:id="label_status" layoutX="14.0" layoutY="46.0" prefHeight="25.0" prefWidth="103.0"
-                               text="Setup status:">
+                        <Label fx:id="label_status" layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="490.0"
+                               text="Setup status">
                            <font>
-                              <Font size="13.0"/>
+                              <Font name="Segoe UI Light" size="15.0"/>
                            </font>
                         </Label>
-                        <Label fx:id="label_statusvalue" layoutX="104.0" layoutY="9.0" prefHeight="99.0"
-                               prefWidth="412.0" text="No issues detected">
+                        <Label fx:id="label_statusvalue" layoutX="14.0" layoutY="39.0" prefHeight="65.0"
+                               prefWidth="490.0" text="No issues detected">
                            <font>
                               <Font name="Segoe UI Black" size="15.0"/>
                            </font>
                         </Label>
                      </children>
                   </Pane>
-                  <StackPane alignment="TOP_CENTER" layoutX="75.0" layoutY="79.0" pickOnBounds="false"
+                  <StackPane alignment="TOP_CENTER" layoutX="15.0" layoutY="138.0" pickOnBounds="false"
                              prefHeight="336.0" prefWidth="517.0">
                      <children>
                         <TitledPane collapsible="false" prefHeight="124.0" prefWidth="524.0" text="Extra Settings">
@@ -110,33 +105,38 @@
                         </TitledPane>
                      </children>
                   </StackPane>
+                  <Label layoutX="12.0" layoutY="14.0" prefHeight="34.0" prefWidth="509.0" text="Scan a new URL">
+                     <font>
+                        <Font name="Segoe UI Black" size="18.0"/>
+                     </font>
+                  </Label>
                </children>
             </Pane>
-            <Pane fx:id="scanPanel" layoutX="115.0" layoutY="23.0" prefHeight="523.0" prefWidth="631.0" visible="false">
+            <Pane fx:id="scanPanel" layoutX="49.0" layoutY="24.0" prefHeight="672.0" prefWidth="912.0" visible="false">
                <children>
-                  <Label fx:id="operation_label" alignment="CENTER" contentDisplay="CENTER" layoutX="68.0"
-                         layoutY="122.0" prefHeight="206.0" prefWidth="498.0" style="-fx-background-color: black;"
+                  <Label fx:id="operation_label" alignment="CENTER" contentDisplay="CENTER" layoutX="208.0"
+                         layoutY="213.0" prefHeight="257.0" prefWidth="498.0" style="-fx-background-color: black;"
                          text="Results will appear here, as soon as the test concludes" textAlignment="CENTER"
                          textFill="WHITE" textOverrun="CENTER_ELLIPSIS" wrapText="true">
                      <font>
                         <Font name="JetBrains Mono Regular" size="13.0"/>
                      </font>
                   </Label>
-                  <Label fx:id="label_scan" alignment="CENTER" layoutX="40.0" layoutY="14.0" prefHeight="30.0"
+                  <Label fx:id="label_scan" alignment="CENTER" layoutX="182.0" layoutY="36.0" prefHeight="30.0"
                          prefWidth="552.0" text="Analyzing...">
                      <font>
-                        <Font name="Segoe UI Black" size="20.0"/>
+                        <Font name="Segoe UI Black" size="30.0"/>
                      </font>
                   </Label>
-                  <ProgressBar fx:id="scanProgress" layoutX="131.0" layoutY="58.0" prefHeight="18.0" prefWidth="369.0"
+                  <ProgressBar fx:id="scanProgress" layoutX="144.0" layoutY="106.0" prefHeight="34.0" prefWidth="627.0"
                                progress="0.0" style="-fx-border-color: #24d41e; -fx-border-width: 1;"/>
-                  <TextArea fx:id="log" editable="false" layoutX="67.0" layoutY="355.0" prefHeight="116.0"
+                  <TextArea fx:id="log" editable="false" layoutX="206.0" layoutY="485.0" prefHeight="116.0"
                             prefWidth="498.0" promptText="Output log" wrapText="true">
                      <font>
                         <Font size="15.0"/>
                      </font>
                   </TextArea>
-                  <Button fx:id="button_finish" layoutX="289.0" layoutY="480.0" mnemonicParsing="false"
+                  <Button fx:id="button_finish" layoutX="426.0" layoutY="609.0" mnemonicParsing="false"
                           onAction="#reset"
                           style="-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2;" text="DONE"
                           textAlignment="CENTER">
@@ -144,15 +144,52 @@
                         <Font name="Segoe UI Black" size="12.0"/>
                      </font>
                   </Button>
-                  <Label fx:id="label_progressdetails" alignment="CENTER" layoutX="76.0" layoutY="76.0"
-                         prefHeight="29.0" prefWidth="481.0" text="Progress details will appear here..."
-                         textAlignment="CENTER" wrapText="true">
-                     <font>
-                        <Font name="Segoe UI Light" size="14.0"/>
-                     </font>
-                  </Label>
+                  <HBox alignment="CENTER" layoutX="204.0" layoutY="151.0" prefHeight="49.0" prefWidth="498.0">
+                     <children>
+                        <Label fx:id="label_progressdetails" alignment="CENTER" contentDisplay="CENTER"
+                               text="Please wait, validating information..." textAlignment="CENTER" wrapText="true">
+                           <font>
+                              <Font name="Segoe UI Light" size="17.0"/>
+                           </font>
+                           <padding>
+                              <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+                           </padding>
+                           <HBox.margin>
+                              <Insets left="8.0" right="8.0"/>
+                           </HBox.margin>
+                        </Label>
+                        <ProgressIndicator fx:id="loading_icon" prefHeight="23.0" prefWidth="29.0"/>
+                     </children>
+                  </HBox>
                </children>
             </Pane>
+            <ScrollPane fx:id="recentUrlPane" fitToHeight="true" hbarPolicy="NEVER" layoutX="571.0" layoutY="-2.0"
+                        minViewportHeight="200.0" prefHeight="713.0" prefWidth="425.0">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="699.0" prefWidth="414.0"
+                              style="-fx-border-color: black; -fx-border-width: 4;">
+                     <children>
+                        <ListView fx:id="listview_recent" editable="true" layoutX="12.0" layoutY="66.0"
+                                  onMouseEntered="#setURLElementHandlers" prefHeight="623.0" prefWidth="391.0"/>
+                        <Label layoutX="12.0" layoutY="5.0" prefHeight="42.0" prefWidth="377.0"
+                               text="Recently scanned URLs">
+                           <font>
+                              <Font name="Segoe UI Black" size="18.0"/>
+                           </font>
+                        </Label>
+                        <Label layoutX="14.0" layoutY="39.0" prefHeight="17.0" prefWidth="389.0"
+                               text="Click on the URL to copy it to the textbox">
+                           <font>
+                              <Font name="Segoe UI Light" size="14.0"/>
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+               </padding>
+            </ScrollPane>
          </children>
       </Pane>
    </children>
